--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
 html {
-    color: white;
-    background-color: blue;
+    background-color: hsl(212, 45%, 89%);
+    color: hsl(218, 44%, 22%);
+    font-family: 'Outfit', sans-serif;
+}
+
+.white-box {
+    background-color: hsl(0, 0%, 100%);
+}
+
+@media screen and (min-width:375px) {
+    /* styles for screens larger than mobile */
 }
 
 .attribution { 
@@ -10,3 +19,31 @@ html {
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
+
+/* # Front-end Style Guide
+
+## Layout
+
+The designs were created to the following widths:
+
+- Mobile: 375px
+- Desktop: 1440px
+
+## Colors
+
+- White: hsl(0, 0%, 100%)
+- Light gray: hsl(212, 45%, 89%)
+- Grayish blue: hsl(220, 15%, 55%)
+- Dark blue: hsl(218, 44%, 22%)
+
+## Typography
+
+### Body Copy
+
+- Font size (paragraph): 15px
+
+### Font
+
+- Family: [Outfit](https://fonts.google.com/specimen/Outfit)
+- Weights: 400, 700
+ */
