--- a/styles.css
+++ b/styles.css
@@ -2,48 +2,62 @@ html {
     background-color: hsl(212, 45%, 89%);
     color: hsl(218, 44%, 22%);
     font-family: 'Outfit', sans-serif;
+    text-align: center;
+}
+
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
 .white-box {
     background-color: hsl(0, 0%, 100%);
+    width: 300px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 50px;
+    border-radius: 20px;
+    border: none;
+    box-shadow:  0px 8px 12px 10px hsl(211, 56%, 88%);
 }
 
-@media screen and (min-width:375px) {
-    /* styles for screens larger than mobile */
+.qr-code {
+    width: 270px;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: 15px;
+    border-radius: 10px;
+}
+
+.text-box {
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 20px;
+}
+
+h1 {
+    font-size: 20px;
+}
+
+p {
+    color: hsl(220, 15%, 55%);
+    font-size: 15px;
 }
 
 .attribution { 
+    margin-top: 10px;
     font-size: 11px; text-align: center; 
 }
     
 .attribution a { 
     color: hsl(228, 45%, 44%); 
 }
-
-/* # Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-- White: hsl(0, 0%, 100%)
-- Light gray: hsl(212, 45%, 89%)
-- Grayish blue: hsl(220, 15%, 55%)
-- Dark blue: hsl(218, 44%, 22%)
-
-## Typography
-
-### Body Copy
-
-- Font size (paragraph): 15px
-
-### Font
-
-- Family: [Outfit](https://fonts.google.com/specimen/Outfit)
-- Weights: 400, 700
- */
